# Japanese-RAG

./: .gitignore  README.md  pyproject.toml
japanese_rag/: 🇯🇵_Chat.py
japanese_rag/pages/: 📁_Data.py  🔑_APIs.py
japanese_rag/util/: file_util.py  langchain.py  prompt.py  streamlit.py  weaviate.py
